--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,19 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+#rigo{
+    width: 200px;
+}
+
+td{
+    border-right: 2px solid white;
+}
+
+tr{
+    height: 100px;
+}
+
+.token {
+    width: 100px;
+}
