--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,3 +22,11 @@ td > img{
     width: 200px;
     border: 1px solid black;
 }
+
+table{
+    border: solid 1px black;
+}
+
+#halloween {
+    padding-left: 40px;
+}
