--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,33 +31,45 @@ input.form-control {
     padding: 0;
     margin: 0;
 }
-#x-button {
-    color: rgb(230,206,121);
+
+.x-div:before, .x-div:after{
+    content: "";
+    background: rgb(230,206,121);
+    width: 8%;
+    height: 80%;
+    position: absolute;
+    top: 10%;
+    left: 46%;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    }
+.x-div:after {
+    -webkit-transform: rotate(+45deg);
+    transform: rotate(+45deg);
 }
-#o-button {
-    color: rgb(63,172,214);
+    
+.o-div {
+    position: absolute;
+    top: 15%;
+    left: 15%;
+    width: 70%;
+    height: 70%;
+    border: 8px solid rgb(63,172,214);
+    border-radius: 100%;
+        
 }
 button.btn {
+    position: relative;
     border: none;
     padding: 0;
     width: 100%;
     height: 100%;
-    // este overflow no debería existir
-    overflow: hidden;
 }
 button.btn:hover {
     background-color: rgb(94,89,85);
 }
 button.btn:focus{
     box-shadow: none;
-}
-.btn-text {
-    // Esta solucion es muy fea...
-    z-index: 0;
-    font-size: 6em;
-    position: relative;
-    top: -40%;
-    margin: 0;
 }
 
 /* Color classes */
